[gd_scene load_steps=15 format=2]

[ext_resource path="res://resource/your_commander/your_commander.png" type="Texture" id=1]
[ext_resource path="res://explotion_sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://explotion.tscn" type="PackedScene" id=3]
[ext_resource path="res://ship_collision.tscn" type="PackedScene" id=4]
[ext_resource path="res://ship_collision_animation.tscn" type="PackedScene" id=5]
[ext_resource path="res://radar.tscn" type="PackedScene" id=6]
[ext_resource path="res://head_east.tscn" type="PackedScene" id=7]
[ext_resource path="res://direction_collision.tscn" type="PackedScene" id=8]
[ext_resource path="res://life_tag.tscn" type="PackedScene" id=9]
[ext_resource path="res://you_commander.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 42.0119

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.423529, 1 )
colors = PoolColorArray( 0.507813, 0.0694275, 0.14135, 1, 0.827451, 0.394577, 0.0470588, 1, 0.964844, 0.964844, 0.964844, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
trail_divisor = 3
emission_shape = 2
emission_box_extents = Vector3( 0, 0, 0 )
flag_disable_z = true
direction = Vector3( -78, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( -98, 0, 0 )
initial_velocity = 9.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.6
color = Color( 0.913725, 0.698039, 0.054902, 1 )
color_ramp = SubResource( 4 )

[node name="you_commander" type="Area2D"]
collision_layer = 4096
collision_mask = 63
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -8, -2 )
shape = SubResource( 1 )

[node name="turbo" type="Particles2D" parent="."]
position = Vector2( -34, 0 )
amount = 10000
lifetime = 0.7
explosiveness = 0.05
randomness = 1.0
visibility_rect = Rect2( -79, -100, 200, 200 )
process_material = SubResource( 2 )

[node name="explotion_animation" parent="." instance=ExtResource( 3 )]

[node name="explotion" parent="." instance=ExtResource( 2 )]

[node name="ship_collision_animation" parent="." instance=ExtResource( 5 )]

[node name="ship_collision" parent="." instance=ExtResource( 4 )]
frame = 0

[node name="direction_collision" parent="." instance=ExtResource( 8 )]
position = Vector2( -2, 0 )

[node name="head" parent="." instance=ExtResource( 7 )]
position = Vector2( 46, 0 )
scale = Vector2( 50, 50 )
__meta__ = {
"_gizmo_extents_": 0.1
}

[node name="radar" parent="." instance=ExtResource( 6 )]
collision_mask = 4111

[node name="attack_rate" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="life_tag" parent="." instance=ExtResource( 9 )]
position = Vector2( -20, -50 )

[node name="shot_eye" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 500 )
collision_mask = 31
collide_with_areas = true
collide_with_bodies = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="target_detection" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[connection signal="area_entered" from="." to="." method="_on_you_commander_area_entered"]
[connection signal="animation_finished" from="explotion_animation" to="." method="_on_explotion_animation_animation_finished"]
[connection signal="animation_finished" from="ship_collision_animation" to="." method="_on_ship_collision_animation_animation_finished"]
[connection signal="restart_position" from="direction_collision" to="." method="_on_direction_collision_restart_position"]
[connection signal="area_entered" from="radar" to="." method="_on_radar_area_entered"]
[connection signal="area_exited" from="radar" to="." method="_on_radar_area_exited"]
[connection signal="timeout" from="attack_rate" to="." method="_on_attack_rate_timeout"]
[connection signal="timeout" from="target_detection" to="." method="_on_target_detection_timeout"]
